# pcvs

./: .buildinfo  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS  CHANGELOG.md  CHANGES  MANIFEST.in  README.md  genindex.html  index.html  mypy.ini  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.py  tox.ini
.github/workflows/: release.yml  sphinx.yml
.gitlab/: new_release.md
.gitlab/ci/: ci-disabled.yml  ci.yml  run.yml
.gitlab/issue_templates/: bugreport.md  feature_request.md
.gitlab/merge_request_templates/: merge_to_devel.md
_modules/: index.html
_modules/pcvs/: analysis.html  dsl.html  io.html  main.html  orchestration.html  plugins.html  testing.html  webview.html
_modules/pcvs/analysis/: graph.html
_modules/pcvs/backend/: bank.html  config.html  configfile.html  metaconfig.html  profile.html  report.html  run.html  session.html  spack.html  utilities.html
_modules/pcvs/cli/: cli_bank.html  cli_config.html  cli_profile.html  cli_run.html  cli_session.html
_modules/pcvs/converter/: yaml_converter.html
_modules/pcvs/helpers/: communications.html  criterion.html  exceptions.html  git.html  pm.html  resource_tracker.html  storage.html  system.html  utils.html  validation.html
_modules/pcvs/orchestration/: manager.html  publishers.html  runner.html  set.html
_modules/pcvs/testing/: tedesc.html  test.html  testfile.html  teststate.html
_modules/pcvs/webview/: datalayer.html
_sources/: index.rst.txt
_sources/api/: modules.rst.txt  pcvs.analysis.graph.rst.txt  pcvs.analysis.rst.txt  pcvs.backend.bank.rst.txt  pcvs.backend.config.rst.txt  pcvs.backend.configfile.rst.txt  pcvs.backend.metaconfig.rst.txt  pcvs.backend.report.rst.txt  pcvs.backend.rst.txt  pcvs.backend.run.rst.txt  pcvs.backend.session.rst.txt  pcvs.backend.spack.rst.txt  pcvs.backend.utilities.rst.txt  pcvs.cli.cli_bank.rst.txt  pcvs.cli.cli_config.rst.txt  pcvs.cli.cli_convert.rst.txt  pcvs.cli.cli_graph.rst.txt  pcvs.cli.cli_plumbing.rst.txt  pcvs.cli.cli_remote_run.rst.txt  pcvs.cli.cli_report.rst.txt  pcvs.cli.cli_run.rst.txt  pcvs.cli.cli_session.rst.txt  pcvs.cli.cli_utilities.rst.txt  pcvs.cli.rst.txt  pcvs.converter.result_converter.rst.txt  pcvs.converter.rst.txt  pcvs.converter.yaml_converter.rst.txt  pcvs.dsl.rst.txt  pcvs.helpers.communications.rst.txt  pcvs.helpers.criterion.rst.txt  pcvs.helpers.exceptions.rst.txt  pcvs.helpers.git.rst.txt  pcvs.helpers.pm.rst.txt  pcvs.helpers.resource_tracker.rst.txt  pcvs.helpers.rst.txt  pcvs.helpers.storage.rst.txt  pcvs.helpers.utils.rst.txt  pcvs.helpers.validation.rst.txt  pcvs.io.rst.txt  pcvs.main.rst.txt  (+23 more)
_sources/basics/: basic-use.rst.txt  getting-started.rst.txt  installation.rst.txt  issues.rst.txt  tuto.rst.txt  workflow.rst.txt
_sources/dev/: contribution.rst.txt
_sources/ref/: bank.rst.txt  config.rst.txt  examples.rst.txt  plugin.rst.txt  profile.rst.txt  run.rst.txt  test-file.rst.txt
_static/: documentation_options.js  pygments.css
api/: modules.html  pcvs.analysis.graph.html  pcvs.analysis.html  pcvs.backend.bank.html  pcvs.backend.config.html  pcvs.backend.configfile.html  pcvs.backend.html  pcvs.backend.metaconfig.html  pcvs.backend.profile.html  pcvs.backend.report.html  pcvs.backend.run.html  pcvs.backend.session.html  pcvs.backend.spack.html  pcvs.backend.utilities.html  pcvs.cli.cli_bank.html  pcvs.cli.cli_config.html  pcvs.cli.cli_convert.html  pcvs.cli.cli_graph.html  pcvs.cli.cli_plumbing.html  pcvs.cli.cli_profile.html  pcvs.cli.cli_remote_run.html  pcvs.cli.cli_report.html  pcvs.cli.cli_run.html  pcvs.cli.cli_session.html  pcvs.cli.cli_utilities.html  pcvs.cli.html  pcvs.converter.html  pcvs.converter.result_converter.html  pcvs.converter.yaml_converter.html  pcvs.dsl.html  pcvs.helpers.communications.html  pcvs.helpers.criterion.html  pcvs.helpers.exceptions.html  pcvs.helpers.git.html  pcvs.helpers.html  pcvs.helpers.pm.html  pcvs.helpers.resource_tracker.html  pcvs.helpers.storage.html  pcvs.helpers.system.html  pcvs.helpers.utils.html  (+26 more)
basics/: basic-use.html  features.html  getting-started.html  installation.html  issues.html  tuto.html  workflow.html
contrib/: junit.py  mpc.py  multijobs.py
dev/: contribution.html  overview.html
docs/: Makefile  README.md  requirements.txt
docs/source/: conf.py  index.rst
docs/source/api/: pcvs.cli.rst
docs/source/basics/: basic-use.rst  features.rst  getting-started.rst  installation.rst  issues.rst  tuto.rst  workflow.rst
docs/source/dev/: contribution.rst  overview.rst
examples/: bot.py  demo.py  populate.py  visu.py
pcvs/: __init__.py  graph.py  io.py  main.py
pcvs/analysis/: __init__.py  graph.py
pcvs/backend/: bank.py  config.py  configfile.py  metaconfig.py  profile.py  report.py  run.py  session.py  spack.py  utilities.py
pcvs/cli/: cli_bank.py  cli_config.py  cli_convert.py  cli_graph.py  cli_plumbing.py  cli_profile.py  cli_remote_run.py  cli_report.py  cli_run.py  cli_session.py  cli_utilities.py
pcvs/converter/: convert.json  result_converter.py  yaml_converter.py
pcvs/dsl/: __init__.py  analysis.py  render.py
pcvs/helpers/: communications.py  criterion.py  exceptions.py  git.py  pm.py  resource_tracker.py  storage.py  system.py  utils.py  validation.py
pcvs/orchestration/: __init__.py  __main__.py  manager.py  publishers.py  runner.py  set.py
pcvs/plugins/: __init__.py
pcvs/schemes/: README.md  compiler-scheme.yml  machine-scheme.yml  profile-scheme.yml  runtime-scheme.yml  te-scheme.yml  test-result-scheme.yml  update.sh  validation-scheme.yml
pcvs/testing/: __init__.py  tedesc.py  test.py  testfile.py  teststate.py
pcvs/webview/: __init__.py  datalayer.py
ref/: bank.html  config.html  examples.html  plugin.html  profile.html  report.html  run.html  session.html  test-file.html  utils.html
tests/pcvs/: conftest.py
utils/: .typos.toml  autofix_file.sh  gen_random_input.py  gen_random_output.py  pcvs_banner  profile_1_0.sh  release_todo_list.md  setup_ci_env
(+111 files in other folders)
